
* Wed Jul 14 10:36:30 2004, pabs <pabs@pablotron.org>
  * raggle: moved thread handling to Engine::set_thread_priorities
  * raggle: each interface now has a main_loop method

* Wed Jul 14 15:52:55 2004, pabs <pabs@pablotron.org>
  * raggle: update tom's RSS feed URL

* Wed Jul 14 17:40:41 2004, pabs <pabs@pablotron.org>
  * raggle: added Raggle::Interfaces::HTTPServerInterface::init and
    Raggle::Interfaces::DRbServerInteface::init
  * raggle: renamed Raggle::Interfaces::NcursesInterface::setup_win of
    Raggle::Interfaces::NcursesInterfaces::init

* Thu Aug 12 17:40:35 2004, pabs <pabs@pablotron.org>
	* TODO: added a couple of ideas I thought of

* Mon Aug 23 15:02:00 2004, pabs <pabs@pablotron.org>
	* raggle: fix null deref in populate_feed_win

* Tue Aug 24 14:56:44 2004, pabs <pabs@pablotron.org>
	* raggle: PLATFORM => RUBY_PLATFORM, VERSION => RUBY_VERSION (reported
		by Robert McGovern <robertm@spellmanhv.co.uk>.  Apparently that
		causes Cygwin to have a fit.

* Tue Aug 24 23:26:01 2004, pabs <pabs@pablotron.org>
  * raggle: minor TODO update

* Thu Aug 26 15:54:53 2004, pabs <pabs@pablotron.org>
  * raggle: apply patch from Michael Ablassmeier <abi@grinser.de> that
		fixes import of Amphetadesk OPML files (closes
		http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=266046)

* Tue Sep 21 02:44:40 2004, pabs <pabs@pablotron.org>
  * TODO: add note about delicious integration

* Fri Oct 15 01:06:57 2004, heap <vaine@cs.helsinki.fi>
  * raggle: When a blog entry contains multiple links to
    the same site, create reference only for the first
    link and reuse that reference in the rest of the
    duplicate links.
  * extras/test_html_renderer.rb: Fix broken tests and
    add test for the new reference reusing.

* Sat Oct 16 19:01:18 2004, heap <vaine@cs.helsinki.fi>
  * raggle: Fix rendering of links inside <pre>.
    See RSS version of http://www.paulduncan.org/?id=275
    for example.
  * extras/test_html_renderer.rb: Add test for links
    inside <pre>.